test/Fail/Issue7136.err
Issue7136.agda:7.19: error: [ParseError]
Illegal pattern synonym argument  {x = y}
(Arguments to pattern synonyms cannot be named.)
